@@ -165,6 +165,13 @@ namespace octave
     }
 
     std::string
+    env::get_user_data_directory ()
+    {
+      return (instance_ok ())
+        ? instance->do_get_user_data_directory () : "";
+    }
+
+    std::string
     env::get_program_name (void)
     {
       return (instance_ok ())
@@ -248,9 +255,9 @@ namespace octave
       if (SHGetFolderPathW (nullptr, CSIDL_APPDATA | CSIDL_FLAG_DONT_VERIFY,
                             nullptr, SHGFP_TYPE_CURRENT, path) == S_OK)
         {
-          char *local_app_data = u8_from_wchar (path);
-          cfg_dir = local_app_data;
-          free (local_app_data);
+          char *app_data = u8_from_wchar (path);
+          cfg_dir = app_data;
+          free (app_data);
         }
 #else
       cfg_dir = do_getenv ("XDG_CONFIG_HOME");
@@ -262,6 +269,32 @@ namespace octave
 
       return cfg_dir;
     }
+
+  std::string
+  env::do_get_user_data_directory (void) const
+  {
+      std::string data_dir;
+
+#if defined (OCTAVE_HAVE_WINDOWS_FILESYSTEM) && defined (OCTAVE_USE_WINDOWS_API)
+      wchar_t path[MAX_PATH+1];
+      if (SHGetFolderPathW (nullptr, CSIDL_APPDATA | CSIDL_FLAG_DONT_VERIFY,
+                            nullptr, SHGFP_TYPE_CURRENT, path) == S_OK)
+        {
+          char *app_data = u8_from_wchar (path);
+          data_dir = app_data;
+          free (app_data);
+        }
+#else
+      data_dir = do_getenv ("XDG_DATA_HOME");
+
+      if (data_dir.empty ())
+        data_dir = do_get_home_directory () + sys::file_ops::dir_sep_str ()
+             + ".local" + sys::file_ops::dir_sep_str () + "share";
+#endif
+
+      return data_dir;
+  }
+
 
     // FIXME: this leaves no way to distinguish between a
     // variable that is not set and one that is set to the empty string.
